// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AstMetadataInferer should expose metadata.json in parsable format 1`] = `
Object {
  "apiType": "js-api",
  "astNodeTypes": Array [
    "MemberExpression",
  ],
  "compat": Object {
    "mdn_url": "https://developer.mozilla.org/docs/Web/API/Document/querySelector",
    "status": Object {
      "deprecated": false,
      "experimental": false,
      "standard_track": true,
    },
    "support": Object {
      "chrome": Object {
        "version_added": "1",
      },
      "chrome_android": Object {
        "version_added": true,
      },
      "edge": Object {
        "version_added": true,
      },
      "edge_mobile": Object {
        "version_added": true,
      },
      "firefox": Object {
        "version_added": "3.5",
      },
      "firefox_android": Object {
        "version_added": true,
      },
      "ie": Object {
        "version_added": "8",
      },
      "opera": Object {
        "version_added": "10",
      },
      "opera_android": Object {
        "version_added": "10",
      },
      "safari": Object {
        "version_added": "3.2",
      },
      "safari_ios": Object {
        "version_added": "3.2",
      },
      "webview_android": Object {
        "version_added": true,
      },
    },
  },
  "isStatic": true,
  "protoChain": Array [
    "document",
    "querySelector",
  ],
  "protoChainId": "document.querySelector",
  "type": "js-api",
}
`;

exports[`AstMetadataInferer should return basic output 1`] = `
Object {
  "apiType": "js-api",
  "astNodeTypes": Array [
    "NewExpression",
  ],
  "compat": Object {
    "mdn_url": "https://developer.mozilla.org/docs/Web/API/AbortController",
    "status": Object {
      "deprecated": false,
      "experimental": true,
      "standard_track": true,
    },
    "support": Object {
      "chrome": Object {
        "version_added": "66",
      },
      "chrome_android": Object {
        "version_added": "66",
      },
      "edge": Object {
        "version_added": "16",
      },
      "edge_mobile": Object {
        "version_added": false,
      },
      "firefox": Object {
        "version_added": "57",
      },
      "firefox_android": Object {
        "version_added": "57",
      },
      "ie": Object {
        "version_added": false,
      },
      "opera": Object {
        "version_added": "53",
      },
      "opera_android": Object {
        "version_added": "53",
      },
      "safari": Object {
        "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://bugs.webkit.org/show_bug.cgi?id=174980'>bug 174980</a>.",
        "partial_implementation": true,
        "version_added": "11.1",
      },
      "safari_ios": Object {
        "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://bugs.webkit.org/show_bug.cgi?id=174980'>bug 174980</a>.",
        "partial_implementation": true,
        "version_added": "11.1",
      },
      "samsunginternet_android": Object {
        "version_added": false,
      },
      "webview_android": Object {
        "version_added": "66",
      },
    },
  },
  "isStatic": true,
  "protoChain": Array [
    "AbortController",
  ],
  "protoChainId": "AbortController",
  "type": "js-api",
}
`;

exports[`AstMetadataInferer should write to metadata.json correctly 1`] = `
Object {
  "apiType": "js-api",
  "astNodeTypes": Array [
    "NewExpression",
  ],
  "compat": Object {
    "mdn_url": "https://developer.mozilla.org/docs/Web/API/AbortController",
    "status": Object {
      "deprecated": false,
      "experimental": true,
      "standard_track": true,
    },
    "support": Object {
      "chrome": Object {
        "version_added": "66",
      },
      "chrome_android": Object {
        "version_added": "66",
      },
      "edge": Object {
        "version_added": "16",
      },
      "edge_mobile": Object {
        "version_added": false,
      },
      "firefox": Object {
        "version_added": "57",
      },
      "firefox_android": Object {
        "version_added": "57",
      },
      "ie": Object {
        "version_added": false,
      },
      "opera": Object {
        "version_added": "53",
      },
      "opera_android": Object {
        "version_added": "53",
      },
      "safari": Object {
        "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://bugs.webkit.org/show_bug.cgi?id=174980'>bug 174980</a>.",
        "partial_implementation": true,
        "version_added": "11.1",
      },
      "safari_ios": Object {
        "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://bugs.webkit.org/show_bug.cgi?id=174980'>bug 174980</a>.",
        "partial_implementation": true,
        "version_added": "11.1",
      },
      "samsunginternet_android": Object {
        "version_added": false,
      },
      "webview_android": Object {
        "version_added": "66",
      },
    },
  },
  "isStatic": true,
  "protoChain": Array [
    "AbortController",
  ],
  "protoChainId": "AbortController",
  "type": "js-api",
}
`;
